--- a/fetusapp/static/style.css
+++ b/fetusapp/static/style.css
@@ -2,15 +2,11 @@
 :root {
     /* Define color variables */
     --calming-blue: #297FB9;          /* Primary button color */
-    --gradient-color: 239, 83, 158;     /* fetus*/
-    --gradient-color: 255, 79, 64;      /* monzo */
-    --gradient-color: 159, 232, 112;    /* wise */
-    --gradient-color: 239, 83, 158;     /* fetus*/
     --vibrant-pink: #EF539E;          /* Active state color for nav link */
     --vibrant-pink: #ff4f40;          /* monzo*/
     --vibrant-pink: #9FE870;          /* wise*/
-    --vibrant-pink: #EF539E;          /* monzo*/
-    --warm-beige: #F3E1D7;            /* Background color */
+    --vibrant-pink: #9a8eaa;          /* monzo*/
+    /* --warm-beige: #F3E1D7;            /* Background color */
     /* Match root background to body to avoid black gutter */
     background-color: #212529;
 }
@@ -174,9 +170,9 @@ footer a:hover{
 .zd-bottom {
     background-image: linear-gradient(
         90deg,
-        rgba(var(--gradient-color), 0) 0%,
-        rgba(var(--gradient-color), 0.8) 50%,
-        rgba(var(--gradient-color), 0) 100%
+        oklch(from var(--vibrant-pink) l c h / 0) 0%,
+        oklch(from var(--vibrant-pink) l c h / 0.8)  50%,
+        oklch(from var(--vibrant-pink) l c h / 0) 100%
     );
     background-size: 100% 1px;
     background-repeat: no-repeat;
@@ -187,9 +183,9 @@ footer a:hover{
 .zd {
     background-image: linear-gradient(
         90deg,
-        rgba(var(--gradient-color), 0) 0%,
-        rgba(var(--gradient-color), 0.8) 50%,
-        rgba(var(--gradient-color), 0) 100%
+        oklch(from var(--vibrant-pink) l c h / 0) 0%,
+        oklch(from var(--vibrant-pink) l c h / 0.8)  50%,
+        oklch(from var(--vibrant-pink) l c h / 0) 100%
     );
     background-size: 100% 1px;
     background-repeat: no-repeat;
