update burger css

--- a/fetusapp/static/style.css
+++ b/fetusapp/static/style.css
@@ -100,10 +100,15 @@ h2, h5 {
     border-color: var(--vibrant-pink)
 }
 
-.navbar-dark .navbar-toggler-icon,
-.navbar-light .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28239, 83, 158, 0.99' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+.toggler-bar {
+  display:block;
+  width:1.5rem;
+  height:2px;
+  margin:0.3rem 0;
+  background-color: var(--vibrant-pink);
+  transition: background-color 0.3s;
 }
+
 
 .navbar-dark .navbar-nav .nav-link.active,
 .navbar-dark .navbar-nav .show>.nav-link,
