update the user login required

--- a/fetusapp/templates/patient.html
+++ b/fetusapp/templates/patient.html
@@ -402,8 +402,8 @@
 
 </main>
 {% else %}
-    <div class="container mt-5 pt-5">
-        <p class="text-danger">You are not logged in</p>
+    <div class="container mt-5 pt-5 text-center">
+        <p class="text-danger">Δεν είστε συνδεδεμένοι.</p>
     </div>
 {% endif %}
 
