--- a/fetusapp/templates/base.html
+++ b/fetusapp/templates/base.html
@@ -118,7 +118,7 @@
 
 
 
-  <footer class="footer mt-auto py-3 bg-dark text-end">
+  <footer class="footer mt-auto p-3 bg-dark text-center">
   <!-- <footer class="footer mt-auto py-3 bg-light text-end"> -->
       {% if current_user.is_authenticated %}
       <!-- User display, visible only on large screens -->
