--- a/fetusapp/templates/patient_tabs/history_gyn.html
+++ b/fetusapp/templates/patient_tabs/history_gyn.html
@@ -1,4 +1,5 @@
 {% import 'macros.html' as macros %}
+<link rel="stylesheet" href="{{ url_for('static', filename='history_gyn.css') }}">
 
 <div>
     <h5>Επισκέψεις</h5>
@@ -10,7 +11,7 @@
                     <div class="row g-3" id="pregnancyHistoryEntries">
                         <div class="col-12 col-lg-3 col-xl-2">
                             <div class="py-3 ms-3 me-3 me-lg-0">
-                                <ul class="nav nav-pills flex-column secondary-nav-container bg-dark w-100" id="pregnancies-inner-tab" role="tablist">
+                                <ul class="nav nav-pills flex-column secondary-nav-container bg-dark w-100 gyn-visit-list" id="pregnancies-inner-tab" role="tablist">
                                     {% for entry in gyn_entries %}
                                         {% set prefix = 'HistoryPregnancy_' ~ loop.index %}
                                         <li class="nav-item  w-90" role="presentation">
