--- a/fetusapp/templates/patient_tabs/history_gyn.html
+++ b/fetusapp/templates/patient_tabs/history_gyn.html
@@ -6,14 +6,15 @@
     <div class="col-12">
         <div class="card card-cover inherit-text-color bg-transparent rounded-4 shadow-lg">
             <div class="d-flex flex-column h-100 text-shadow-1">
-                {% if gyn_entries %}
+                {% if history_gyn_form.entries %}
                 <div class="container px-0 ">
                     <div class="row g-3" id="pregnancyHistoryEntries">
                         <div class="col-12 col-lg-3 col-xl-2">
                             <div class="py-3 ms-3 me-3 me-lg-0">
+                                {% if history_gyn_form.entries[0].data.id %}
                                 <ul class="nav nav-pills flex-column secondary-nav-container bg-dark w-100 gyn-visit-list" id="pregnancies-inner-tab" role="tablist">
-                                    {% for entry in gyn_entries %}
-                                        {% set prefix = 'HistoryPregnancy_' ~ loop.index %}
+                                    {% for entry_form in history_gyn_form.entries %}
+                                        {% set prefix = 'HistoryGyn_' ~ loop.index %}
                                         <li class="nav-item  w-90" role="presentation">
                                             <button class="nav-link w-100 {% if loop.first %}active{% endif %}"
                                             style="border-radius: 5rem;"
@@ -23,11 +24,21 @@
                                             role="tab"
                                             aria-controls="pills-pregnancies-{{ loop.index }}"
                                             aria-selected="false">
-                                                {{ entry.date_of_visit }}
+                                            {{ entry_form.form.date_of_visit.data }}
                                             </button>
                                         </li>
                                     {% endfor %}
                                 </ul>
+                                {% endif %}
+                                <div class="read-only read-only-labels py-4 ">
+                                    <button type="button" class="btn btn-outline-secondary px-4 w-100" data-edit-button="true" onclick="openNewGynHistoryEntry()">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-plus-square" viewBox="0 1 16 16">
+                                            <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+                                            <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
+                                        </svg>
+                                        Νέα Επίσκεψη
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
